<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_algo"
            android:icon="@drawable/algo"
            android:title="@string/nav_algo" />
        <item
            android:id="@+id/nav_vids"
            android:icon="@drawable/vids"
            android:title="@string/nav_videos" />

        <item
            android:id="@+id/nav_ems"
            android:icon="@drawable/ems"
            android:title="EMS" />
        <item android:id="@+id/mydownloads"

            android:icon="@drawable/download_ic"
            android:title="Saved Posts"/>
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_social_media"
                android:icon="@drawable/about"
                android:title="@string/nav_social_media" />
            <item
                android:id="@+id/nav_website_link"
                android:icon="@drawable/about"
                android:title="@string/nav_website_link" />
            <item
                android:id="@+id/nav_contact_link"
                android:icon="@drawable/about"
                android:title="@string/nav_contact_link" />
        </menu>
    </item>

</menu>