<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    tools:context="main.emfk.com.emfklatest.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:background="@drawable/border_shadows"
        android:theme="@style/AppTheme.NoActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:src="@drawable/enlarged_emf"
            android:theme="@style/AppTheme.NoActionBar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"/>
    </android.support.design.widget.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_subject"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_text_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_message"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_message" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="Send"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:id="@+id/btnSend"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_below="@id/input_message"
                android:layout_gravity="bottom"
                android:layout_marginBottom="100dp"
                android:layout_height="wrap_content">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook500"
                android:id="@+id/fbIcon"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/twitter"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:id="@+id/twIcon"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/googleplus"
                android:id="@+id/gpIcon"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/linkedin"
                android:id="@+id/linkedinicon"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/rss"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:id="@+id/rssicon"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/youtubevariation"
                android:id="@+id/ytbicon"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view2"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/card_view2"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#C5CAE9"
        android:foreground="?attr/selectableItemBackground">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:textSize="@dimen/listDateTimeSize"
                android:textColor="@color/lTitleColor"
                android:text="Name"
                android:layout_marginLeft="5dp"
                android:width="0dip"
                android:maxLines="2"
                android:ellipsize="end"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.CardView>
</android.support.design.widget.CoordinatorLayout>